--- a/p8105_h2_sl4269.Rmd
+++ b/p8105_h2_sl4269.Rmd
@@ -16,7 +16,8 @@ Loading libraries
 
 ```{r libraries, message=FALSE, warning=FALSE}
 library(tidyverse)
-
+library(tidyr)
+library(dplyr)
 ```
 
 
@@ -67,6 +68,33 @@ precip_by_year
 
 ###Datadiscription
 
-The `precip18_and_17` dataset contains precipitation data of 2017 and 2018.  There are `6` months of missing data in 2018 being from august to december. The dimentions of this dataset is `13x3` where the 13th row is total precipiation. For the available data the total precipitation of 2018 was `r pull(precip_by_year[13,3])` and the median number of sports balls in the dumpster is `r mr.trash %>% pull(sports_balls) %>% median()`.
+The `precip18_and_17` dataset contains precipitation data of 2017 and 2018.  There are `6` months of missing data in 2018 being from august to december. The dimentions of this dataset is `13x3` where the 13th row is total precipiation. For the available data the total precipitation of 2018 was `r pull(precip_by_year[13,3])` and the median number of sports balls in the dumpster in 2017 is `r mr.trash %>% pull(sports_balls) %>% median()`.
 
 #Problem 2
+
+```{r}
+
+polls <- 
+  read_csv("data/pols-month.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(mon, c('year', 'month', 'day') ) %>% 
+  mutate(
+    month = as.numeric(month), 
+    month = month.name[month],
+    president = prez_gop + prez_dem 
+    ) %>% 
+  select(year, month, president, everything(), -day, - prez_gop, -prez_dem) 
+  
+
+polls
+
+snp <- 
+  read_csv("data/snp.csv") %>% 
+  janitor::clean_names()
+
+unemployed <- 
+  read_csv("data/unemployment.csv") %>% 
+  janitor::clean_names()
+
+```
+
