--- a/p8105_h2_sl4269.md
+++ b/p8105_h2_sl4269.md
@@ -30,13 +30,13 @@ Cleaning and merging precipitation data sets
 ``` r
 ##precipitation is in inches
 precip17<- 
-  readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", na= "", trim_ws = T, skip = 1, sheet = 4) %>% 
+  readxl::read_excel("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", na= "", trim_ws = T, skip = 1, sheet = 6) %>% 
   janitor::clean_names() %>% 
   drop_na(total)%>%
   mutate(year = "2017", month = month.name[month])
 
 precip18<- 
-  readxl::read_excel("./data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", na= "", trim_ws = T, skip = 1, sheet = 3) %>% 
+  readxl::read_excel("./data/Trash-Wheel-Collection-Totals-8-6-19.xlsx", na= "", trim_ws = T, skip = 1, sheet = 5) %>% 
   janitor::clean_names() %>% 
   drop_na(total)%>%
   mutate(year = "2018", month = month.name[month])
@@ -48,30 +48,68 @@ precip_by_year<- precip18_and_17 %>%
               names_from = year,
               values_from = total)
 precip_by_year$month[13]<- "Total precipitation"
-
-precip_by_year
 ```
-
-    ## # A tibble: 13 x 3
-    ##    month               `2017` `2018`
-    ##    <chr>                <dbl>  <dbl>
-    ##  1 January               2.34   0.96
-    ##  2 February              1.46   5.3 
-    ##  3 March                 3.57   2.18
-    ##  4 April                 3.99   3.2 
-    ##  5 May                   5.64   9.27
-    ##  6 June                  1.4    0.2 
-    ##  7 July                  7.09   2.39
-    ##  8 August                4.44  NA   
-    ##  9 September             1.95  NA   
-    ## 10 October               0     NA   
-    ## 11 November              0.11  NA   
-    ## 12 December              0.94  NA   
-    ## 13 Total precipitation  32.9   23.5
 
 ### Datadiscription
 
-The `precip18_and_17` dataset contains precipitation data of 2017 and 2018. There are `6` months of missing data in 2018 being from august to december. The dimentions of this dataset is `13x3` where the 13th row is total precipiation. For the available data the total precipitation of 2018 was 23.5 and the median number of sports balls in the dumpster is 8.
+The `precip18_and_17` dataset contains precipitation data of 2017 and 2018. The dimentions of this dataset is `13x3` where the 13th row is total precipiation. For the available data the total precipitation of 2018 was 70.33 and the median number of sports balls in the dumpster in 2017 is 8.
 
 Problem 2
 =========
+
+``` r
+polls <- 
+  read_csv("data/pols-month.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(mon, c('year', 'month', 'day') ) %>% 
+  mutate(
+    month = month.abb[as.numeric(month)] %>% tolower(), 
+    president = prez_gop + prez_dem 
+    ) %>% 
+  select(year, month, president, everything(), -day, - prez_gop, -prez_dem) %>% 
+  arrange(year, month)
+
+snp <- 
+  read_csv("data/snp.csv") %>% 
+  janitor::clean_names() %>% 
+  separate(date, c("month","day","year")) %>% 
+  mutate( 
+    month= month.abb[as.numeric(month)] %>% tolower()
+  ) %>% 
+  select(year, month, everything()) %>% 
+  arrange(year,month)
+
+unemployed <- 
+  read_csv("data/unemployment.csv") %>% 
+  janitor::clean_names() %>% 
+  mutate(
+    year = as.character(year)
+  ) %>% 
+  pivot_longer(
+    jan:dec,
+    names_to = "month",
+    values_to = "unemployment"
+  ) %>% 
+  arrange(year,month)
+
+polls_snp<- merge(polls, snp, by = c("year","month")) 
+
+polls_snp_umemployed <- left_join(polls_snp, unemployed, by = c("year", "month"))
+  
+head(polls_snp_umemployed)
+```
+
+    ##   year month president gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem day
+    ## 1 1950   apr         1      18      44     177      29      57     269   3
+    ## 2 1950   aug         1      18      44     177      29      57     269   1
+    ## 3 1950   dec         1      18      44     177      29      57     269   1
+    ## 4 1950   feb         1      18      44     177      29      57     269   1
+    ## 5 1950   jan         1      18      44     177      29      57     269   3
+    ## 6 1950   jul         1      18      44     177      29      57     269   3
+    ##   close unemployment
+    ## 1 17.96          5.8
+    ## 2 18.42          4.5
+    ## 3 20.43          4.3
+    ## 4 17.22          6.4
+    ## 5 17.05          6.5
+    ## 6 17.84          5.0
