--- a/p8105_h2_sl4269.md
+++ b/p8105_h2_sl4269.md
@@ -94,22 +94,15 @@ unemployed <-
 
 polls_snp<- merge(polls, snp, by = c("year","month")) 
 
-polls_snp_umemployed <- left_join(polls_snp, unemployed, by = c("year", "month"))
-  
-head(polls_snp_umemployed)
+polls_snp_umemployed <- left_join(polls_snp, unemployed, by = c("year", "month")) %>% 
+  select(everything(), - day)
+
+view(polls_snp_umemployed)
+
+dim(polls_snp_umemployed
+    )
 ```
 
-    ##   year month president gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem day
-    ## 1 1950   apr         1      18      44     177      29      57     269   3
-    ## 2 1950   aug         1      18      44     177      29      57     269   1
-    ## 3 1950   dec         1      18      44     177      29      57     269   1
-    ## 4 1950   feb         1      18      44     177      29      57     269   1
-    ## 5 1950   jan         1      18      44     177      29      57     269   3
-    ## 6 1950   jul         1      18      44     177      29      57     269   3
-    ##   close unemployment
-    ## 1 17.96          5.8
-    ## 2 18.42          4.5
-    ## 3 20.43          4.3
-    ## 4 17.22          6.4
-    ## 5 17.05          6.5
-    ## 6 17.84          5.0
+    ## [1] 786  11
+
+The polls data set contains poll information from all the branches of government from the time of `1947 - 2015`. The dimenstion of this dataset is `822 by 9`. The snp data set contains information about the number of retracted peer reviewed papers from `1950 - 2015` with a dimension of `787 by 4`. Lastly, the unemployed dataset contains information of unemployment percentages from years `1948 - 2015` and dimentions of `816 to 3`. When the data sets combined, thet are filtered by the time period`1950 - 2015` and the dimensions are `786 by 11`.
