--- a/p8105_h2_sl4269.md
+++ b/p8105_h2_sl4269.md
@@ -106,3 +106,116 @@ dim(polls_snp_umemployed
     ## [1] 786  11
 
 The polls data set contains poll information from all the branches of government from the time of `1947 - 2015`. The dimenstion of this dataset is `822 by 9`. The snp data set contains information about the number of retracted peer reviewed papers from `1950 - 2015` with a dimension of `787 by 4`. Lastly, the unemployed dataset contains information of unemployment percentages from years `1948 - 2015` and dimentions of `816 to 3`. When the data sets combined, thet are filtered by the time period`1950 - 2015` and the dimensions are `786 by 11`.
+
+Problem 3
+=========
+
+Loading in data set and cleaning it
+
+``` r
+Baby_names <- 
+  read_csv("./data/Popular_Baby_Names.csv") %>% 
+  janitor::clean_names() %>% 
+  distinct() %>% 
+  mutate(rank = as.factor(rank))
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   `Year of Birth` = col_double(),
+    ##   Gender = col_character(),
+    ##   Ethnicity = col_character(),
+    ##   `Child's First Name` = col_character(),
+    ##   Count = col_double(),
+    ##   Rank = col_double()
+    ## )
+
+Table of Olivai's rank over time and ethnicity.
+
+``` r
+baby_olivia<- 
+  Baby_names %>% 
+  filter(childs_first_name =="Olivia") %>% 
+  group_by(ethnicity, year_of_birth) 
+  baby_olivia<- baby_olivia[order(pull(baby_olivia,rank)),] 
+  baby_olivia %>% 
+  knitr::kable(digits = 1)
+```
+
+|  year\_of\_birth| gender | ethnicity                  | childs\_first\_name |  count| rank |
+|----------------:|:-------|:---------------------------|:--------------------|------:|:-----|
+|             2016| FEMALE | ASIAN AND PACIFIC ISLANDER | Olivia              |    172| 1    |
+|             2016| FEMALE | WHITE NON HISPANIC         | Olivia              |    230| 1    |
+|             2015| FEMALE | ASIAN AND PACIFIC ISLANDER | Olivia              |    188| 1    |
+|             2015| FEMALE | WHITE NON HISPANIC         | Olivia              |    225| 1    |
+|             2014| FEMALE | ASIAN AND PACIFIC ISLANDER | Olivia              |    141| 1    |
+|             2014| FEMALE | WHITE NON HISPANIC         | Olivia              |    248| 1    |
+|             2013| FEMALE | WHITE NON HISPANIC         | Olivia              |    233| 1    |
+|             2013| FEMALE | ASIAN AND PACIFIC ISLANDER | Olivia              |    109| 3    |
+|             2015| FEMALE | BLACK NON HISPANIC         | Olivia              |     82| 4    |
+|             2013| FEMALE | BLACK NON HISPANIC         | Olivia              |     64| 6    |
+|             2016| FEMALE | BLACK NON HISPANIC         | Olivia              |     49| 8    |
+|             2014| FEMALE | BLACK NON HISPANIC         | Olivia              |     52| 8    |
+|             2016| FEMALE | HISPANIC                   | Olivia              |    108| 13   |
+|             2015| FEMALE | HISPANIC                   | Olivia              |     94| 16   |
+|             2014| FEMALE | HISPANIC                   | Olivia              |     96| 16   |
+|             2013| FEMALE | HISPANIC                   | Olivia              |     87| 22   |
+
+Table of most popular male names.
+
+``` r
+baby_popular_male_name <-
+  Baby_names %>% 
+  filter(gender == "MALE", rank == 1)
+
+baby_popular_male_name <- 
+  baby_popular_male_name[
+    order(
+      pull(
+        baby_popular_male_name,-rank)
+      ),
+    ]
+
+baby_popular_male_name %>% 
+  knitr::kable(digits = 1)
+```
+
+|  year\_of\_birth| gender | ethnicity                  | childs\_first\_name |  count| rank |
+|----------------:|:-------|:---------------------------|:--------------------|------:|:-----|
+|             2011| MALE   | ASIAN AND PACIFIC ISLANDER | ETHAN               |    177| 1    |
+|             2011| MALE   | BLACK NON HISPANIC         | JAYDEN              |    184| 1    |
+|             2011| MALE   | HISPANIC                   | JAYDEN              |    426| 1    |
+|             2011| MALE   | WHITE NON HISPANIC         | MICHAEL             |    292| 1    |
+|             2012| MALE   | ASIAN AND PACI             | RYAN                |    197| 1    |
+|             2012| MALE   | BLACK NON HISP             | JAYDEN              |    171| 1    |
+|             2012| MALE   | HISPANIC                   | JAYDEN              |    364| 1    |
+|             2012| MALE   | WHITE NON HISP             | JOSEPH              |    300| 1    |
+|             2013| MALE   | ASIAN AND PACIFIC ISLANDER | Jayden              |    220| 1    |
+|             2013| MALE   | BLACK NON HISPANIC         | Ethan               |    146| 1    |
+|             2013| MALE   | HISPANIC                   | Jayden              |    352| 1    |
+|             2013| MALE   | WHITE NON HISPANIC         | David               |    304| 1    |
+|             2014| MALE   | ASIAN AND PACIFIC ISLANDER | Jayden              |    187| 1    |
+|             2014| MALE   | BLACK NON HISPANIC         | Ethan               |    138| 1    |
+|             2014| MALE   | HISPANIC                   | Liam                |    312| 1    |
+|             2014| MALE   | WHITE NON HISPANIC         | Joseph              |    300| 1    |
+|             2015| MALE   | ASIAN AND PACIFIC ISLANDER | Jayden              |    190| 1    |
+|             2015| MALE   | BLACK NON HISPANIC         | Noah                |    163| 1    |
+|             2015| MALE   | HISPANIC                   | Liam                |    356| 1    |
+|             2015| MALE   | WHITE NON HISPANIC         | David               |    299| 1    |
+|             2016| MALE   | ASIAN AND PACIFIC ISLANDER | Ethan               |    193| 1    |
+|             2016| MALE   | BLACK NON HISPANIC         | Noah                |    148| 1    |
+|             2016| MALE   | HISPANIC                   | Liam                |    387| 1    |
+|             2016| MALE   | WHITE NON HISPANIC         | Joseph              |    261| 1    |
+
+Scatter plot of male, white non-hispanic, baby name observastions along wtih their rank.
+
+``` r
+baby_male_name_scatterplot <-
+  Baby_names %>% 
+  filter(gender == "MALE", ethnicity == "WHITE NON HISPANIC", year_of_birth == 2016) %>% 
+  ggplot(aes(x = rank, y = count))+geom_point()+labs(title = "Male White Non Hispanic baby name count by Rank in 2016")
+
+baby_male_name_scatterplot
+```
+
+![](p8105_h2_sl4269_files/figure-markdown_github/unnamed-chunk-4-1.png)
